[package]
name = "szyszka"
version = "3.0.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2021"
description = "Fast, powerful and easy to use file renamer"
license = "MIT"
homepage = "https://github.com/qarmin/szyszka"
repository = "https://github.com/qarmin/szyszka"
rust-version = "1.69.0"

[dependencies]
gdk4 = "0.6"
gio = "0.17"
glib = "0.17"

directories-next = "2.0.0"

rayon = "1.7.0"

# For checking path
jwalk = "0.8.1"

humansize = "2.1"
chrono = "0.4.24"

# For opening files
open = "4.1"

# For slugs
slugmin = "1.0"

regex = "1.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Language
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6"
rust-embed = "6.6"
once_cell = "1.17"

[dependencies.gtk4]
version = "0.6"
default-features = false # just in case
features = ["v4_6"]

# Optimize all dependencies except application/workspaces, even in debug builds
[profile.dev.package."*"]
opt-level = 3
